Test/git-issues/git-issue-327cir2.dfy.expect
git-issue-327cir2.dfy(6,7): Error: module definition contains a cycle (note: parent modules implicitly depend on submodules): D -> E -> E -> D -> D
1 resolution/type errors detected in git-issue-327cir2.dfy
